--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,10 +30,23 @@ export(syms)
 export(tally_observations)
 export(threshold_otsu)
 export(validate_newdata)
-import(checkmate)
 import(dplyr)
 import(sf)
 importFrom(AICcmodavg,modavgPred)
+importFrom(checkmate,assertTRUE)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_data_frame)
+importFrom(checkmate,assert_date)
+importFrom(checkmate,assert_number)
+importFrom(checkmate,assert_numeric)
+importFrom(checkmate,assert_subset)
+importFrom(checkmate,assert_true)
+importFrom(checkmate,makeAssertCollection)
+importFrom(checkmate,reportAssertions)
+importFrom(checkmate,test_data_frame)
+importFrom(checkmate,test_numeric)
+importFrom(checkmate,test_true)
+importFrom(checkmate,test_vector)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
@@ -43,12 +56,10 @@ importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
-importFrom(glue,glue)
 importFrom(graphics,hist)
 importFrom(landscapemetrics,sample_lsm)
 importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
-importFrom(magrittr,'%>%')
 importFrom(osmextract,oe_download_directory)
 importFrom(osmextract,oe_match)
 importFrom(osmextract,oe_read)
@@ -65,7 +76,6 @@ importFrom(rlang,expr)
 importFrom(rlang,is_empty)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
-importFrom(sen2r,list_indices)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_text)
