debug error where amended veg raster had no data inside UGS area

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,5 +135,6 @@ importFrom(tidyselect,contains)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
 importFrom(tidyselect,starts_with)
+importFrom(tidyselect,where)
 importFrom(units,set_units)
 importFrom(vegan,specaccum)
